[project]
name = "hammer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "polizogo", email = "nate.polizogo@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
imutils = [
    "numpy>=2.2.2",
    "opencv-python>=4.11.0.86",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
